--- a/microblog/app/templates/index.html
+++ b/microblog/app/templates/index.html
@@ -3,8 +3,8 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <h1> 嗨, {{ user.username }}!</h1>
+    <h1> Hi, {{ user.username }}!</h1>
     {% for post in posts %}
-    <div><p>{{ post.author.username }} 說： <b>{{ post.body }}</b></p></div>
+    <div><p>{{ post.author.username }} says： <b>{{ post.body }}</b></p></div>
     {% endfor %}
 {% endblock %}
