feat: receiving form data and improving fied validation

--- a/microblog/app/templates/login.html
+++ b/microblog/app/templates/login.html
@@ -4,8 +4,9 @@
 
 {% block content %}
     <h1>Sign In</h1>
-    <form action="" method="post" novalidate>
+    <form action="" method="POST" novalidate>
         {{ form.hidden_tag() }}
+<!--        form是由後端拋到前端來的一個參數，username是我們在Form中所設置的屬性名稱，而label是該屬性的第一個參數。-->
         <p>
             {{ form.username.label }}<br>
             {{ form.username(size=32) }}<br>
